Prevent overlap

--- a/src/components/main/Home/Home.scss
+++ b/src/components/main/Home/Home.scss
@@ -4,6 +4,7 @@
   background-size: cover;
   position: relative;
   border-style: none;
+  display: block;
 
   &:before {
     content: '';
@@ -14,83 +15,57 @@
     left: 0;
     right: 0;
   }
+}
 
-  .hero-container {
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    text-align: center;
+.hero-container {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
 
-    h1 {
-      margin: 30px 0 10px 0;
-      font-size: 48px;
-      font-weight: 500;
-      line-height: 56px;
-      text-transform: uppercase;
-      color: #f7fffd;
-    }
+  h1 {
+    margin: 30px 0 10px 0;
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 56px;
+    text-transform: uppercase;
+    color: #f7fffd;
+  }
 
-    h2 {
-      color: #f67280;
-      margin-bottom: 50px;
-      font-size: 24px;
-    }
+  h2 {
+    color: #f67280;
+    margin-bottom: 50px;
+    font-size: 24px;
+  }
+}
 
-    .icon-box {
-      background: transparent;
-      background-size: cover;
-      padding: 0 0 30px 0;
-    }
+.icon-box {
+  background: transparent;
+  background-size: cover;
+  padding: 0 0 30px 0;
+}
 
-    .icon-box .icon {
-      float: left;
-      background: transparent;
-      width: 52px;
-      height: 52px;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-      -ms-flex-align: center;
-      align-items: center;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      text-align: center;
-      border-radius: 50%;
-      border: 2px solid #f67280;
-    }
+.icon {
+  float: left;
+  background: transparent;
+  width: 52px;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 50%;
+  border: 2px solid #f67280;
 
-    .icon-box .icon i {
-      color: #f67280;
-      font-size: 36px;
-    }
+  i {
+    color: #f67280;
+    font-size: 36px;
   }
 }
